# pilgram2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  ruff.yml
pilgram2/: _1977.py  __init__.py  _version.py  aden.py  amaro.py  ashby.py  brannan.py  brooklyn.py  charmes.py  clarendon.py  crema.py  dogpatch.py  earlybird.py  gingham.py  ginza.py  hefe.py  helena.py  hudson.py  inkwell.py  juno.py  kelvin.py  lark.py  lofi.py  ludwig.py  maven.py  mayfair.py  moon.py  nashville.py  perpetua.py  poprocket.py  reyes.py  rise.py  sierra.py  skyline.py  slumber.py  stinson.py  sutro.py  toaster.py  valencia.py  walden.py  (+2 more)
pilgram2/css/: __init__.py  brightness.py  contrast.py  grayscale.py  hue_rotate.py  saturate.py  sepia.py
pilgram2/css/blending/: __init__.py  alpha.py  color.py  color_burn.py  color_dodge.py  darken.py  difference.py  exclusion.py  hard_light.py  hue.py  lighten.py  multiply.py  nonseparable.py  normal.py  overlay.py  screen.py  soft_light.py
pilgram2/css/blending/tests/: test_alpha.py  test_color.py  test_color_burn.py  test_color_dodge.py  test_darken.py  test_difference.py  test_exclusion.py  test_hard_light.py  test_hue.py  test_lighten.py  test_multiply.py  test_nonseparable.py  test_normal.py  test_overlay.py  test_screen.py  test_soft_light.py
pilgram2/css/blending/tests/helpers/: __init__.py  alpha_support.py
pilgram2/css/tests/: __init__.py  test_brightness.py  test_contrast.py  test_grayscale.py  test_hue_rotate.py  test_saturate.py  test_sepia.py
pilgram2/tests/: test_1977.py  test_aden.py  test_amaro.py  test_ashby.py  test_brannan.py  test_brooklyn.py  test_charmes.py  test_clarendon.py  test_crema.py  test_dogpatch.py  test_earlybird.py  test_gingham.py  test_ginza.py  test_hefe.py  test_helena.py  test_hudson.py  test_inkwell.py  test_juno.py  test_kelvin.py  test_lark.py  test_lofi.py  test_ludwig.py  test_maven.py  test_mayfair.py  test_moon.py  test_nashville.py  test_perpetua.py  test_poprocket.py  test_reyes.py  test_rise.py  test_sierra.py  test_skyline.py  test_slumber.py  test_stinson.py  test_sutro.py  test_toaster.py  test_valencia.py  test_walden.py  test_willow.py  test_xpro2.py
pilgram2/util/: __init__.py  add.py  apply_lut.py  clip.py  fill.py  invert.py  linear_gradient.py  or_convert.py  radial_gradient.py  subtract.py
pilgram2/util/tests/: test_add.py  test_apply_lut.py  test_clip.py  test_fill.py  test_invert.py  test_linear_gradient.py  test_or_convert.py  test_radial_gradient.py  test_subtract.py
