[project]
name = "pilgram2"
requires-python = ">=3.8"
version = "2.0.2"
description = "library for instagram filters"
authors = [{ name = "Michael G", email = "me@mgrl.de" },{ name = "Akiomi Kamakura", email = "akiomik@gmail.com" }]
maintainers = [{ name = "Michael G", email = "me@mgrl.de" }]
readme = "README.md"
license = { file = "LICENSE" }
urls = { repository = "https://github.com/mgrl/pilgram2" }
classifiers = [
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Topic :: Multimedia :: Graphics",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = [
  "pillow",
  "instagram",
  "instagram-filters",
  "css-filters",
  "image-blending",
  "blend-modes",
  "image-processing",
  "data-augmentation"
]


[tool.poetry]
name = "pilgram2"
version = "2.0.2"
description = "library for instagram filters"
authors = ["Michael G <me@mgrl.de>", "Akiomi Kamakura <akiomik@gmail.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
numpy = "^1.24.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
Pillow = "^9.3.0"
pytest-benchmark = "^4.0.0"
pytest-mock = "^3.10.0"
numpy = "^1.23.4"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
select = [
  "E",   # pycodestyle
  "W",   # pycodestyle
  "F",   # pyflakes
  "B",   # bugbear
  "UP",  # pyupgrade
  "I",   # isort
]

[tool.pytest.ini_options]
addopts = "-v --cov=pilgram2 --benchmark-skip"

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
show_missing = true
